--- a/client/app.json
+++ b/client/app.json
@@ -1,12 +1,11 @@
 {
     "pages": [
-        "pages/index/index",
-        "pages/chat/chat"
+        "pages/index/index"
     ],
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#333",
-        "navigationBarTitleText": "腾讯云小程序解决方案",
+        "navigationBarTitleText": "Remote Tool",
         "navigationBarTextStyle": "white"
     }
 }
