--- a/wxapp/app.json
+++ b/wxapp/app.json
@@ -1,11 +1,34 @@
 {
     "pages": [
-        "pages/index/index"
+        "pages/start/start",
+        "pages/index/index",
+        "pages/task/task"
     ],
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#333",
         "navigationBarTitleText": "Remote Tool",
         "navigationBarTextStyle": "white"
+    },
+    "tabBar": {
+      "color": "#6e6d6b",
+      "selectedColor": "#e64340",
+      "borderStyle": "white",
+      "backgroundColor": "#fff",
+      "box-shadow": "0 0 6px 0",
+      "list": [
+        {
+          "pagePath": "pages/index/index",
+          "iconPath": "images/home-off.png",
+          "selectedIconPath": "images/home-on.png",
+          "text": "首页"
+        },
+        {
+          "pagePath": "pages/task/task",
+          "iconPath": "images/task-off.png",
+          "selectedIconPath": "images/task-on.png",
+          "text": "任务"
+        }
+      ]
     }
 }
