--- a/wxapp/app.json
+++ b/wxapp/app.json
@@ -9,12 +9,12 @@
         "navigationBarBackgroundColor": "#333",
         "navigationBarTitleText": "Remote Tool",
         "navigationBarTextStyle": "white",
-        "enablePullDownRefresh": true
+        "enablePullDownRefresh": false
     },
     "tabBar": {
       "color": "#6e6d6b",
       "selectedColor": "#e64340",
-      "borderStyle": "white",
+      "borderStyle": "black",
       "backgroundColor": "#fff",
       "box-shadow": "0 0 6px 0",
       "list": [
